# scheduler

./: .dockerignore  .flake8  .gitignore  README.md  docker-compose.yml  py36_requirements.txt  py38_requirements.txt  pyproject.toml
alembic/: env.py
celery_app/: celeryapp.py  loader.py
celery_app/celeryconfig/: base.py  py36.py  py38.py
conf/: alembic.ini  config.py  constants.py  env.example  flower.env  gunicorn.conf.py  logging.conf.yml
docker/: py36_worker.dockerfile  py38_worker.dockerfile  scheduler.dockerfile
models/: __init__.py  meta.py
scripts/cicd/: format.sh  test.sh
scripts/postgres/: 0-schema.sql
scripts/rabbitmq/: rabbitmq.conf
scripts/web/: startup.sh
scripts/workers/: startup.sh
utils/health_checker/: health_checker.py
utils/logging/: elk_formatter.py  logging_filters.py
webapp/: __main__.py  db.py  deps.py  logger.py  main.py  metrics.py
webapp/common/api/: misc.py
webapp/common/schemas/: misc.py
webapp/v0/api/: scheduler.py
webapp/v0/schemas/: task.py
workers/: README.md  constants.py
workers/py36_worker/: child_task.py  py36_task.dill
workers/py38_worker/: child_task.py  py38_task.dill
